# arista

./: .env.dist  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: cmc.yml  coinglass.yml  deribit.yml  funding_rate.yaml  ohlc.yml
arista/: .envrc  __init__.py  alembic.ini  coinglass.py  exceptions.py  google_sheets.py  main.py
arista/alembic/: env.py
arista/alembic/versions/: 1e7b3533c80b_add_datetiem.py  2024_10_18_0924-bc6304c73727_allow_for_null_values.py  2024_10_18_1045-792e01babb51_add_iso_col.py  2024_10_24_1434-4fa1ae8b0448_add_openinterest_table.py  2024_10_24_1451-d26f0e83c759_restructure_tables.py  2024_10_25_0904-a03a1e549978_rename_column.py  2024_11_04_2124-c98da7da90d0_rename_table.py  2024_11_05_2301-8da2daa87275_add_deribit_future_table.py  2024_11_05_2307-0484ece0decb_add_unique_constraint.py  2024_11_06_1622-13c25ade546b_remove_unique_constriant.py  2024_12_08_1412-dfac5065a4b4_sync_database_schema.py  2025_01_31_1614-01253d063674_coolify_initial_schema.py  21067b772840_add_datetime.py  40618842fa23_update_table.py  46b0c793fa65_add_change_interval_type.py  56dd70ab525b_add_interval_column.py  5caa0d9a71f8_add_datetime_col.py  6304f155141a_allow_null_value.py  6de998d43fe0_setup_fundingrate.py  9235dd11c33c_add_fundingrate_table.py  b336c35ee74b_.py  c1ea072719e9_ohlc_table.py  c2c23aa49fc5_add_coinmarketcap_table.py
arista/api/: cmc.py  coinglass.py  coinmarketcap.py  deribit.py  deribit_futures.py
arista/db/: repositories.py  session.py
arista/models/: __init__.py  coinmarketcap.py  deribit.py  funding_rate.py  marketcap.py  ohlc_history.py  open_interest.py
arista/scripts/: cmc.py  coinglass.py  coinmarketcap.py  deribit.py  deribit_one_off.py
config/: exchanges.yml
grafana/: btc_30d_annualised_next_best.sql  btc_90d_annualised_basis.sql
notebooks/: Analysis.ipynb
