[tool.poetry]
name = "arista"
version = "0.1.0"
description = "Data driven portfolio"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.3"
ruff = "^0.4.9"
google-auth = "^2.30.0"
google-api-python-client = "^2.134.0"
google-auth-oauthlib = "^1.2.0"
google-auth-httplib2 = "^0.2.0"
pydantic = "^2.7.1"
psycopg2-binary = "2.9.5"
sqlmodel = "^0.0.21"
alembic = "^1.13.2"

jupyterlab = "^4.2.4"
click = "^8.1.7"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
google_sheets = "arista.google_sheets:main"
